<resources>
    <string name="app_name">Project2Team 12</string>
    <string name="end_loser">Better luck next time</string>
    <string name="end_winner">Wins!</string>
    <string name="end_button">Play Again</string>
    <string name="StartButton">Play</string>
    <string name="player_board">Player One\'s Board</string>
    <string name="place_instructions">Click to Add or Remove Ship</string>
    <string name="attack_instructions">Click a Tile to Attack</string>
    <string name="DoneButton">Done</string>
    <string name="SurrenderButton">Surrender</string>
    <string name="picture_of_game_board">Picture of game board</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="remember_me">Remember this User</string>
    <string name="save_preferences_check">Remember</string>
    <string name="picture_desc">Image of bold battleship text</string>
    <string name = "image_desc">Image of a small battleship</string>
    <string name="menu">menu</string>
    <string name="help">Help</string>
    <string name="back_check_title">End the Game?</string>
    <string name="back_check_body">Choose \"yes\" to end the game or \"no\" to continue</string>
    <string name="surrender_check_title">Surrender the Battle?</string>
    <string name="surrender_check_body">Choose \"yes\" to surrender or \"no\" to continue</string>
    <string name="tile_already_hit">Please choose an unselected grid block</string>
    <string name="player_warning">Warning: Players cannot have identical names</string>
    <string name="game_instructions">Click a square to attack. If you miss a circle will appear,
        and if you hit an opponents ship, an X will appear. Destroy all 4 of your opponents ships
        to win the game!</string>
    <string name="placement_instructions">Click to place a ship inside a grid square. Click the
        same square to remove the ship. Place 4 ships to proceed.</string>
    <string name="placement_done_message">Make sure you place all 4 boats before pressing done!</string>
    <string name="placement_done_title">Whoops!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password_len">Password must be at least 6 characters</string>
    <string name="invalid_password_diff">Passwords do not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lobby_select">Select a Lobby</string>
    <string name="lobby_create">Create Lobby</string>
    <string name="invalid_login">Invalid Username or Password</string>
    <string name="new_to_battleship">New to Battleship?</string>
    <string name="username_taken">Username is already registered</string>
    <string name="signup_success">Account created, please login</string>
    <string name="waiting">Waiting For Player…</string>
    <string name="lobby_name">Create New Lobby</string>
    <string name="create_name">Name</string>
    <string name="lobby_fail">Could not create lobby</string>
    <string name="lobby_success">Lobby created</string>
    <string name="lobby_join_fail">Error - could not join Lobby</string>
    <string name="refresh">Refresh</string>
    <string name="waitingText">Waiting For Opponent...</string>


</resources>