<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#B562C3FB"
android:orientation="vertical"
tools:context=".SignUpActivity">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_gravity="bottom"
    android:layout_weight="3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="50dp" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="50dp" />

        <EditText
            android:id="@+id/signupPasswordConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:ems="10"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:minHeight="50dp" />
    </LinearLayout>

</FrameLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/SignupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onSignup"
            android:text="@string/sign_up" />
    </FrameLayout>
</RelativeLayout>

</LinearLayout>