<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/GameBoard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="4"
        android:contentDescription="@string/picture_of_game_board"
        android:padding="20dp"
        app:srcCompat="@drawable/empty_game_board"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/Place_Instructions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/place_instructions"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/Done_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp"
            android:text="@string/DoneButton"
            android:textSize="20sp" />
    </FrameLayout>

</LinearLayout>